--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "date-fns": "^2.28.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
+    "react-loader-spinner": "^6.0.0-0",
     "react-scripts": "5.0.1",
     "react-table": "^7.7.0",
     "react-table-sticky": "^1.1.3",
